# FmpegDemo

./: settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/cn/luozhanming/opengldemo/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/cn/luozhanming/opengldemo/: FFmpgeTest.java  MainActivity.kt
app/src/main/jni/: JniTest.c
app/src/main/jni/ffmpeg/include/libffmpeg/: config.h
app/src/main/jni/include/: cn_luozhanming_opengldemo_JniTest.h  mlog.h
app/src/main/res/layout/: activity_main.xml
app/src/test/java/cn/luozhanming/opengldemo/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
